--- a/Next/board/package.json
+++ b/Next/board/package.json
@@ -6,19 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@graphql-codegen/typescript": "^3.0.3",
     "@material-ui/core": "^4.12.4",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "graphql": "^16.6.0",
     "next": "12.1.0",
-    "node-fetch": "^3.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^3.3.0",
+    "@types/node": "17.0.2",
+    "@types/react": "17.0.2",
+    "typescript": "^5.0.3"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2"
   }
 }
