--- a/Next/boardfront/package.json
+++ b/Next/boardfront/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.3",
     "axios": "^1.3.6",
     "next": "13.3.1",
     "react": "18.2.0",
